initial project path was set to test folder, using compui folder now

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "composer-binary": "composer",
-  "project-path": "./test/",
+  "project-path": "./",
   "allowed-commands": [
     "update",
     "install",
