--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "ajaxorg/ace": "1.4.5"
     },
     "scripts": {
+        "post-install-cmd": [
+            "mkdir assets/",
+            "cp -R vendor/twbs/bootstrap/dist assets/bootstrap",
+            "cp -R vendor/twbs/bootstrap/assets/js/vendor assets/bootstrap/js",
+            "cp -R vendor/ajaxorg/ace/src-min assets/ace"
+        ],
         "post-update-cmd": [
             "rm -rf assets/bootstrap",
             "cp -R vendor/twbs/bootstrap/dist assets/bootstrap",
